tried to get some further SEO improvements done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="http://www.commerce-experts.com/img/favicon.ico">
     <link rel="profile" href="http://gmpg.org/xfn/11" />
     
-	<meta name="description" content="Optimierung datengetriebener Multichannel E-Business Projekte mit Hilfe von Technologieberatung &amp; Software-Solutions - Commerce Experts UG in Pforzheim.">
+	<meta name="description" content="Optimierung datengetriebener Multichannel E-Business Projekte mit Hilfe von Technologieberatung &amp; Softwarelösungen - Commerce Experts UG in Pforzheim.">
     <link rel="canonical" href="http://www.commerce-experts.com/" />
 	<meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
@@ -91,7 +91,7 @@
 				<div class="span12">
 					<div id="slidecaption">
 						Ihre <span class="color-text">Experten</span> f&uuml;r den<span class="color-text"> digitalen Handel</span>
-						<div class="sub-caption"><h1>F&uuml;r unsere Kunden & Partner ebnen wir Wege beim Einstieg, bei der Optimierung und w&auml;hrend der Wachstumsphase im digitalen Multichannel Handel</h1></div>
+						<div class="sub-caption">F&uuml;r unsere Kunden und Partner ebnen wir Wege beim Einstieg, bei der Optimierung sowie w&auml;hrend der Wachstumsphase im digitalen Multichannel Handel</div>
 						<a href="#about" class="btn white scroll-link">Erfahren Sie mehr</a>
 					</div>
 				</div>
@@ -105,7 +105,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="span4">
-						<a href="#home" class="logo"><img src="http://www.commerce-experts.com/img/Commerce-Experts-Logo.png" title="Experten für den Digitalen Handel" alt="Experten für den Digitalen Handel"></a>
+						<a href="#home" class="logo"><img src="http://www.commerce-experts.com/img/Commerce-Experts-Logo.png" title="Commerce Experts" alt="Daten Getriebener Digitalen Handel"></a>
 					</div>
 					<div class="span8">
 						<ul id="fluid-nav" class="fluid-navigation visible-desktop">
@@ -129,8 +129,8 @@
 				<div class="row">
 					<div class="span12">
 						<div class="title">Was <span class="color-text">wir </span>tun</div>
-                        <div class="sub-caption"><h2>Commerce-Experts steht f&uuml;r qualitativ hochwertige datengetriebene Projekte mit hohem <br>Investitionsschutz f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h2>
-                        <p>Ein wesentliches Merkmal unserer Projekte ist die zentrale & integrierte Erfassung von Datenstr&ouml;men aus verschiedenen Quellen.<br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile und performante Prozesse, kanal&uuml;bergreifende Datenstrukturen und eine hervorragende User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen, um die Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu erm&ouml;glichen.<br> F&uuml;r den erforderlichen Datenaustausch zwischen den Systemen entwickelt und supportet Commerce Experts mit seinem Datahub, Schnittstellen zu den f&uuml;hrenden Systemen im Markt und schafft so nachhaltig und unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r Kunden und Partner.</p>
+                        <div class="sub-caption"><h1 style=font-size:1.2em>Qualitativ hochwertige datengetriebene Projekte mit hohem Investitionsschutz f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h1>
+                        <p>Wesentliches Merkmal unserer Projekte ist eine zentrale &amp; integrierte Erfassung von Datenstr&ouml;men aus verschiedenen Quellen.<br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile &amp; performante Prozesse, kanal&uuml;bergreifende Datenstrukturen in Verbindung mit einer hervorragenden User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die geb&uuml;ndelt &amp; aufbereitet werden m&uuml;ssen, um eine Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu erm&ouml;glichen. F&uuml;r einen erforderlichen Datenaustausch zwischen den Systemen entwickelt &amp; supportet Commerce Experts mit seinem Datahub, Schnittstellen zu f&uuml;hrenden Systemen im Markt und schafft so nachhaltig &amp; unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r Kunden &amp; Partner.</p>
                         </div><p></p>
 						
 						<div class="row slider-services">
@@ -160,23 +160,23 @@
 						</div>
 						<div class="row">
 							<div class="span3">
-								<h2 style="font-size:0.95em">Data Driven Commerce</h2>
-								<p>Ein integriertes, datengetriebenes Commerce OS ist die Voraussetzung f&uuml;r eine zielorientierte und kanal&uuml;bergreifende Kundenansprache. Wir helfen Ihnen dabei Ihre Systeme ERP, Onsite Search & Navigation, Analytics, Guided Selling, Recommendation & Personalisierung mittels unseres eigens entwickleten Datahubs zu verbinden und sie integriert zu nutzen.</p>
+								<h1 style="font-size:0.95em">Data Driven Commerce</h1>
+								<p>Ein integriertes, datengetriebenes Commerce OS ist Voraussetzung f&uuml;r eine zielorientierte &amp; kanal&uuml;bergreifende Kundenansprache. Wir helfen Ihnen dabei Ihre Systeme ERP, Onsite Search &amp; Navigation, Analytics, Guided Selling, Recommendation &amp; Personalisierung mittels unseres eigens entwickleten Datahubs zu verbinden und sie integriert zu nutzen.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-								<h2 style="font-size:0.95em">Conversion Optimierung</h2>
-								<p>Conversion Optimierung wird immer wichtiger. Steigender Wettbewerbsdruck erfordert erprobte und effektive Methoden zur Optimierung von Websites und Onlineshops. Commerce Experts hilft Ihnen dabei Startseiten, Landing Pages, Produktseiten oder Kaufprozesse - durch sequentielles daten getriebenes Testing systematisch zu optimieren.</p>
+								<h1 style="font-size:0.95em">Conversion Optimierung</h1>
+								<p>Conversion Optimierung wird immer wichtiger. Steigender Wettbewerbsdruck erfordert erprobte &amp; effektive Methoden zur Optimierung von Websites und Onlineshops. Commerce Experts hilft Ihnen dabei Startseiten, Landing Pages, Produktseiten oder Kaufprozesse - durch sequentielles datengetriebenes Testing systematisch zu optimieren.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-								<h2 style="font-size:0.95em">Application Management</h2>
-								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens und wir verantworten die Applikationen. Hardware und ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verf&uuml;gbarkeiten, Sie entscheiden die H&ouml;he Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
+								<h1 style="font-size:0.95em">Application Management</h1>
+								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens - wir verantworten Ihre Applikationen. <br>Hardware &amp; ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verf&uuml;gbarkeiten, Sie entscheiden die H&ouml;he Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-                                <h2 style="font-size:0.95em">Go-to-Market Strategy</h2>
-								<p>Sie suchen einen kompetenten und verl&auml;sslichen Partner f&uuml;r den Vertrieb Ihrer Software-L&ouml;sungen im Europ&auml;ischen eCommerce Markt? Ein umfangreiches eCommerce Netzwerk sowie die langj&auml;hrige Beziehungen zu H&auml;ndlern und Agenturen bildet die Grundlage f&uuml;r den schnellen Vertriebserfolg w&auml;hrend der Wachstumsphase.</p> 								
+                                <h1 style="font-size:0.95em">Go-to-Market Strategy</h1>
+								<p>Sie suchen einen kompetenten &amp; verl&auml;sslichen Partner f&uuml;r den Vertrieb Ihrer Software-L&ouml;sungen im Europ&auml;ischen eCommerce Markt? Ein umfangreiches eCommerce Netzwerk sowie langj&auml;hrige Beziehungen zu H&auml;ndlern &amp; Agenturen bildet die Grundlage f&uuml;r einen schnellen Vertriebserfolg w&auml;hrend der Wachstumsphase.</p> 								
 							</div>
 						</div>
 					</div>
@@ -194,7 +194,7 @@
 					<div class="span12">
 						<div class="vertical-text">
 							<div class="parallax-title">
-                                <h2>Mit viel Gesp&uuml;r f&uuml;r die Bed&uuml;rfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management arbeiten wir an datengetriebenen E-Business-Projekten die begeistern</h2>
+                                <h2>Mit viel Gesp&uuml;r f&uuml;r die Bed&uuml;rfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie &amp; Application Management arbeiten wir an datengetriebenen E-Business-Projekten die begeistern</h2>
                             </div>
                         </div>
                     </div>
@@ -235,8 +235,8 @@ Als Gesch&auml;ftsf&uuml;hrer bei Commerce Experts verantwortet er den Bereich e
 							<div class="profile-name">Mathias Duda</div>
 							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer & Sales Director</div>
 							<div class="profile-desc">
-								<p>Mathias war zuletzt Vertriebsleiter bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen und betreute mit seinem Team mehr als 1000 Kunden & Partner im europ&auml;ischen eCommerce Markt. <br>
-Als Gesch&auml;ftsf&uuml;hrer und Sales Director bei Commerce Experts verantwortet er den strategischen Vertrieb sowie das Partnermangement.</p>
+								<p>Mathias war zuletzt Vertriebsleiter bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen und betreute mit seinem Team mehr als 1000 Kunden &amp; Partner im europ&auml;ischen eCommerce Markt. <br>
+Als Gesch&auml;ftsf&uuml;hrer &amp; Sales Director bei Commerce Experts verantwortet er den strategischen Vertrieb sowie das Partnermangement.</p>
 							</div>
 							<ul class="profile-social-icons">
 								<li><a href="https://www.xing.com/profile/Mathias_Duda"><span class="socicon">l</span></a></li>
@@ -250,10 +250,10 @@ Als Gesch&auml;ftsf&uuml;hrer und Sales Director bei Commerce Experts verantwort
 						<div class="span4 profile">
 							<!-- <img src="http://www.commerce-experts.com/img/team/profile3.jpg" alt="andreas wagner"> -->
 							<div class="profile-name">Andreas Wagner</div>
-							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer & Big Data Scientist</div>
+							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer &amp; Big Data Scientist</div>
 							<div class="profile-desc">
 								<p>Andreas war zuletzt Leiter Produktmanagement bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partnern im europ&auml;ischen eCommerde Markt. <br>
-Als Gesch&auml;ftsf&uuml;hrer und Big Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut s&auml;mtliche Big Data und Personalisierungs Projekte.</p>
+Als Gesch&auml;ftsf&uuml;hrer &amp; Big Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut s&auml;mtliche Big Data &amp; Personalisierungs Projekte.</p>
 							</div>
 							<ul class="profile-social-icons">
 								<li><a href="https://www.xing.com/profile/Andreas_Wagner79"><span class="socicon">l</span></a></li>
@@ -346,7 +346,7 @@ Als Gesch&auml;ftsf&uuml;hrer und Big Data Scientist bei Commerce Experts verant
 					</div>
 					<div class="span4">
 						<h5>&Uuml;ber Commerce-Experts</h5>
-						<p>Die Commerce-Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen E-Business L&ouml;sung.</p>
+						<p>Commerce-Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen E-Business L&ouml;sung.</p>
 					</div>
                     <div class="span4">
 						<h5>Links</h5>
