some further SEO improvements

--- a/impressum.html
+++ b/impressum.html
@@ -138,7 +138,7 @@
 					</div>
 					<div class="span4">
 						<h5>&Uuml;ber Commerce-Experts</h5>
-						<p>Die Commerce-Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen E-Business L&ouml;sung.</p>
+						<p>Die Commerce-Experts UG ist ein Technologieberatungs- &amp; Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen E-Business L&ouml;sung.</p>
 					</div>
                     <div class="span4">
 						<h5>Links</h5>
