--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="icon" href="http://www.commerce-experts.com/img/favicon.ico">
     <link rel="profile" href="http://gmpg.org/xfn/11" />
     
-	<meta name="description" content="Optimierung datengetriebener Multichannel E-Business Projekte mit Hilfe von Technologieberatung &amp; Softwarelösungen - Commerce Experts UG in Pforzheim.">
+	<meta name="description" content="Optimierung datengetriebener Multichannel eBusiness Projekte mit Hilfe von Technologieberatung &amp; Softwarelösungen - Commerce Experts UG in Pforzheim.">
     <link rel="canonical" href="http://www.commerce-experts.com/" />
 	<meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Commerce-Experts | Datengetriebenes Multichannel E-Business" />
-    <meta property="og:description" content="Optimierung datengetriebener Multichannel E-Business Projekte mit Hilfe von Technologieberatung &amp; Software-Solutions - Commerce Experts UG in Pforzheim." />
+    <meta property="og:title" content="Commerce-Experts | Datengetriebenes Multichannel eBusiness" />
+    <meta property="og:description" content="Optimierung datengetriebener Multichannel eBusiness Projekte mit Hilfe von Technologieberatung &amp; Software-Solutions - Commerce Experts UG in Pforzheim." />
     <meta property="og:url" content="http://www.commerce-experts.com/" />
     <meta property="og:site_name" content="Commerce-Experts" />
     <meta property="og:image" content="http://www.commerce-experts.com/img/CXP-Commerce-Experts-Logo.png" />
@@ -194,7 +194,7 @@
 					<div class="span12">
 						<div class="vertical-text">
 							<div class="parallax-title">
-                                <h2>Mit viel Gesp&uuml;r f&uuml;r die Bed&uuml;rfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie &amp; Application Management arbeiten wir an datengetriebenen E-Business-Projekten die begeistern</h2>
+                                <h2>Mit viel Gesp&uuml;r f&uuml;r die Bed&uuml;rfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie &amp; Application Management arbeiten wir an datengetriebenen eBusiness-Projekten die begeistern</h2>
                             </div>
                         </div>
                     </div>
@@ -346,7 +346,7 @@ Als Gesch&auml;ftsf&uuml;hrer &amp; Big Data Scientist bei Commerce Experts vera
 					</div>
 					<div class="span4">
 						<h5>&Uuml;ber Commerce-Experts</h5>
-						<p>Commerce-Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen E-Business L&ouml;sung.</p>
+						<p>Commerce-Experts UG ist ein Technologieberatungs- &amp; Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen eBusiness L&ouml;sung.</p>
 					</div>
                     <div class="span4">
 						<h5>Links</h5>
