further tag improvments for SEO

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="span12">
 						<div class="title">Was <span class="color-text">wir </span>tun</div>
                         <div class="sub-caption"><h1 style=font-size:1.2em>Qualitativ hochwertige datengetriebene Projekte mit hohem Investitionsschutz f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h1>
-                        <p>Wesentliches Merkmal unserer Projekte ist eine zentrale &amp; integrierte Erfassung von Datenstr&ouml;men aus verschiedenen Quellen.<br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile &amp; performante Prozesse, kanal&uuml;bergreifende Datenstrukturen in Verbindung mit einer hervorragenden User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die geb&uuml;ndelt &amp; aufbereitet werden m&uuml;ssen, um eine Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu erm&ouml;glichen. F&uuml;r einen erforderlichen Datenaustausch zwischen den Systemen entwickelt &amp; supportet Commerce Experts mit seinem Datahub, Schnittstellen zu f&uuml;hrenden Systemen im Markt und schafft so nachhaltig &amp; unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r Kunden &amp; Partner.</p>
+                        <p>Wesentliches Merkmal unserer Projekte ist eine zentrale / integrierte Erfassung von Datenstr&ouml;men aus verschiedenen Quellen.<br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile und performante Prozesse, kanal&uuml;bergreifende Datenstrukturen in Verbindung mit einer hervorragenden User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen, um eine Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu erm&ouml;glichen. F&uuml;r einen erforderlichen Datenaustausch zwischen den Systemen entwickelt / supportet Commerce Experts mit seinem Datahub, Schnittstellen zu f&uuml;hrenden Systemen im Markt und schafft so nachhaltig &amp; unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r Kunden &amp; Partner.</p>
                         </div><p></p>
 						
 						<div class="row slider-services">
@@ -166,12 +166,12 @@
 							</div>
 							<div class="span3">
 								<h1 style="font-size:0.95em">Conversion Optimierung</h1>
-								<p>Conversion Optimierung wird immer wichtiger. Steigender Wettbewerbsdruck erfordert erprobte &amp; effektive Methoden zur Optimierung von Websites und Onlineshops. Commerce Experts hilft Ihnen dabei Startseiten, Landing Pages, Produktseiten oder Kaufprozesse - durch sequentielles datengetriebenes Testing systematisch zu optimieren.</p>
+								<p>Conversion Optimierung wird immer wichtiger. Steigender Wettbewerbsdruck erfordert erprobte und effektive Methoden zur Optimierung von Websites und Onlineshops. Commerce Experts hilft Ihnen dabei Startseiten, Landing Pages, Produktseiten oder Kaufprozesse - durch sequentielles datengetriebenes Testing systematisch zu optimieren.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
 								<h1 style="font-size:0.95em">Application Management</h1>
-								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens - wir verantworten Ihre Applikationen. <br>Hardware &amp; ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verf&uuml;gbarkeiten, Sie entscheiden die H&ouml;he Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
+								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens - wir verantworten Ihre Applikationen. <br>Hardware und deren Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verf&uuml;gbarkeiten, Sie entscheiden die H&ouml;he Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
