--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="span12">
-						<div class="title">Was <span class="color-text">wir </span>tun</div>
+						<div class="title">Was <span class="color-text">wir </span>tun <span class="profile-icons">&#0084;</span></div>
                         <div class="sub-caption"><h1 style=font-size:1.2em>Qualitativ hochwertige datengetriebene Projekte mit hohem Investitionsschutz f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h1>
                         <p>Wesentliches Merkmal unserer Projekte ist eine zentrale / integrierte Erfassung von Datenstr&ouml;men aus verschiedenen Quellen.<br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile und performante Prozesse, kanal&uuml;bergreifende Datenstrukturen in Verbindung mit einer hervorragenden User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen, um eine Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu erm&ouml;glichen. F&uuml;r einen erforderlichen Datenaustausch zwischen den Systemen entwickelt / supportet Commerce Experts mit seinem Datahub, Schnittstellen zu f&uuml;hrenden Systemen im Markt und schafft so nachhaltig &amp; unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r Kunden &amp; Partner.</p>
                         </div><p></p>
