--- a/impressum.html
+++ b/impressum.html
@@ -2,7 +2,6 @@
 
 <!--[if lt IE 10]> <link href= "css/ie.css" rel= "stylesheet" media= "all" /> <![endif]-->
 <!--[if lt IE 9]> <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
-<html lang="de-DE" itemscope itemtype="http://schema.org/Article" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://ogp.me/ns/fb#">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -13,6 +12,7 @@
     <link rel="icon" href="http://www.commerce-experts.com/img/favicon.ico">
     <link rel="profile" href="http://gmpg.org/xfn/11" />
     
+    <!-- Some SEO stuff -->
 	<meta name="description" content="Commerce Experts UG | Apartment 3 Schulerstrasse 2 75180 Pforzheim Kontakt: Telefon: +49 7231 16 61 40-1 E-Mail: info[at]commerce-experts.com Gesch&auml;ftsf&uuml;hrung: Siegfried Sch&uuml;le, Mathias Duda, Andreas Wagner.">
     <link rel="canonical" href="http://www.commerce-experts.com/impressum" />
 	<meta property="og:locale" content="de_DE" />
@@ -138,7 +138,7 @@
 					</div>
 					<div class="span4">
 						<h5>&Uuml;ber Commerce-Experts</h5>
-						<p>Die Commerce-Experts UG ist ein Technologieberatungs- &amp; Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen E-Business L&ouml;sung.</p>
+						<p>Die Commerce Experts UG ist ein Technologieberatungs- &amp; Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen E-Business L&ouml;sung.</p>
 					</div>
                     <div class="span4">
 						<h5>Links</h5>
