--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta charset="utf-8" />
     
-	<title>Commerce-Experts | Data-Driven Multichannel E-Business</title>
+	<title>Commerce-Experts | Data-Driven Multichannel eBusiness</title>
     <link rel="icon" href="http://www.commerce-experts.com/img/favicon.ico">
     <link rel="profile" href="http://gmpg.org/xfn/11" />
     
     <!-- Some SEO stuff -->
-	<meta name="description" content="Optimierung datengetriebener Multichannel E-Business Projekte mit Hilfe von Technologieberatung &amp; Softwarelösungen - Commerce-Experts UG.">
+	<meta name="description" content="Mit Data-Driven Multichannel Projekten von Commerce-Experts zu mehr Erfolg in Ihrem eBusiness.">
     <link rel="canonical" href="http://www.commerce-experts.com/" />
 	<meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Commerce-Experts | Data-Driven Multichannel E-Business" />
-    <meta property="og:description" content="Optimierung datengetriebener Multichannel E-Business Projekte mit Hilfe von Technologieberatung &amp; Softwarelösungen - Commerce-Experts UG." />
+    <meta property="og:title" content="Commerce-Experts | Data-Driven Multichannel eBusiness" />
+    <meta property="og:description" content="Mit Data-Driven Multichannel Projekten von Commerce-Experts zu mehr Erfolg in Ihrem eBusiness." />
     <meta property="og:url" content="http://www.commerce-experts.com/" />
     <meta property="og:site_name" content="Commerce-Experts" />
     <meta property="og:image" content="http://www.commerce-experts.com/img/CXP-Commerce-Experts-Logo.png" />
@@ -129,8 +129,8 @@
 				<div class="row">
 					<div class="span12">
 						<div class="title">Was <span class="color-text">wir </span>tun <span class="profile-icons">&#0084;</span></div>
-                        <div class="sub-caption"><h1 style=font-size:1.2em>Data-Driven E-Business - Qualitativ hochwertige datengetriebene Projekte mit hohem Investitionsschutz f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h1>
-                        <p>Erfolgreiche Projekte im digitalen Handel zeichnen sich immer h&auml;ufiger durch eine kanal&uuml;bergreifende, integrierte Nutzung von Datenstrukturen aus - dem sog. <strong>Data-Driven E-Business</strong>. Grundlage hierfür bildet eine Vielzahl an Datenpunkten aus unterschiedlichen Quell-Systemen, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen. Diese Daten sind der Erfolgsfaktor für den Einsatz personalisierter Marketingmaßnahmen. Sie erm&ouml;glichen eine stetige Optimierung der Kundenansprache und der Customer Experience.
+                        <div class="sub-caption"><h1 style=font-size:1.2em>Data-Driven eBusiness - Qualitativ hochwertige datengetriebene Projekte mit hohem Investitionsschutz f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h1>
+                        <p>Erfolgreiche Projekte im digitalen Handel zeichnen sich immer h&auml;ufiger durch eine kanal&uuml;bergreifende, integrierte Nutzung von Datenstrukturen aus - dem sog. <strong>Data-Driven eBusiness</strong>. Grundlage hierfür bildet eine Vielzahl an Datenpunkten aus unterschiedlichen Quell-Systemen, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen. Diese Daten sind der Erfolgsfaktor für den Einsatz personalisierter Marketingmaßnahmen. Sie erm&ouml;glichen eine stetige Optimierung der Kundenansprache und der Customer Experience.
                         <p></p>    
                         <p>Wesentliches Merkmal unserer Projekte ist daher eine zentrale &amp; integrierte Erfassung von Datenstr&ouml;men aus allen relevanten Quellen. F&uuml;r den erforderlichen Datenaustausch zwischen den Quell-Systemen entwickelt / supportet Commerce-Experts mit seinem Datahub, Schnittstellen zu f&uuml;hrenden Systemen im Markt und schafft so nachhaltig und unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r seine Kunden &amp; Partner.
                             </p>
@@ -163,22 +163,22 @@
 						</div>
 						<div class="row">
 							<div class="span3">
-								<h2 style="font-size:0.95em">Data-Driven Commerce</h2>
+								<h3 style="font-size:0.95em">Data-Driven Commerce</h3>
 								<p>Ein integriertes, datengetriebenes Commerce Backend ist Voraussetzung f&uuml;r eine zielorientierte &amp; kanal&uuml;bergreifende Kundenansprache. Wir helfen Ihnen dabei Ihre Systeme - ERP, Onsite Search &amp; Navigation, Analytics, Guided Selling, Recommendation &amp; Personalisierung - zu verbinden und sie integriert zu nutzen um die Kundenansprache zu optimieren.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-								<h2 style="font-size:0.95em">Conversion Optimierung</h2>
+								<h3 style="font-size:0.95em">Conversion Optimierung</h3>
 								<p>Conversion Optimierung wird immer wichtiger. Steigender Wettbewerbsdruck erfordert erprobte und effektive Methoden zur Optimierung von Websites und Onlineshops. Commerce-Experts hilft Ihnen dabei Startseiten, Landing Pages, Produktseiten oder Kaufprozesse - durch sequentielles datengetriebenes Testing systematisch zu optimieren.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-								<h2 style="font-size:0.95em">Application Management</h2>
+								<h3 style="font-size:0.95em">Application Management</h3>
 								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens - wir verantworten Ihre Applikationen. <br>Infrastruktur & Hosting sowie deren Risiken sind unsere Kernkompetenzen. <br>Wir minimieren das Risiko durch garantierte Verf&uuml;gbarkeiten, Sie entscheiden die H&ouml;he Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-                                <h2 style="font-size:0.95em">Go-to-Market Strategy</h2>
+                                <h3 style="font-size:0.95em">Go-to-Market Strategy</h3>
 								<p>Sie suchen einen kompetenten &amp; verl&auml;sslichen Partner f&uuml;r den Vertrieb Ihrer Software-L&ouml;sungen im Europ&auml;ischen eCommerce Markt? Ein umfangreiches eCommerce Netzwerk sowie langj&auml;hrige Beziehungen zu H&auml;ndlern &amp; Agenturen bildet die Grundlage f&uuml;r einen schnellen Vertriebserfolg w&auml;hrend der Wachstumsphase.</p> 								
 							</div>
 						</div>
@@ -197,7 +197,7 @@
 					<div class="span12">
 						<div class="vertical-text">
 							<div class="parallax-title">
-                                <h2>Mit viel Gesp&uuml;r f&uuml;r die Bed&uuml;rfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie &amp; Application Management arbeiten wir an datengetriebenen E-Business-Projekten die begeistern</h2>
+                                <h2>Mit viel Gesp&uuml;r f&uuml;r die Bed&uuml;rfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie &amp; Application Management arbeiten wir an datengetriebenen eBusiness-Projekten die begeistern</h2>
                             </div>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
 							<div class="profile-name">Siegfried Sch&uuml;le</div>
 							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer</div>
 							<div class="profile-desc">
-								<p>Siegfried war lange Jahre Leiter Operations bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden im europ&auml;ischen eCommerce Markt. Zuletzt war er mit seiner (cgi)² als unabh&auml;ngiger E-Commerce Berater f&uuml;r zahlreiche Retailer t&auml;tig.<br>
+								<p>Siegfried war lange Jahre Leiter Operations bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden im europ&auml;ischen eCommerce. Zuletzt war er mit seiner (cgi)² als unabh&auml;ngiger E-Commerce Berater f&uuml;r zahlreiche Retailer t&auml;tig.<br>
 Bei Commerce Experts verantwortet er den Bereich eCommerce Consulting.</p>
 							</div>
 							<ul class="profile-social-icons">
@@ -238,7 +238,7 @@ Bei Commerce Experts verantwortet er den Bereich eCommerce Consulting.</p>
 							<div class="profile-name">Mathias Duda</div>
 							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer & Sales Director</div>
 							<div class="profile-desc">
-								<p>Mathias war zuletzt Vertriebsleiter bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen und betreute mit seinem Team mehr als 1000 Kunden &amp; Partner im europ&auml;ischen eCommerce Markt. <br>
+								<p>Mathias war zuletzt Vertriebsleiter bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen und betreute mit seinem Team mehr als 1000 Kunden &amp; Partner im europ&auml;ischen eCommerce. <br>
 Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertrieb sowie das Partnermangement.</p>
 							</div>
 							<ul class="profile-social-icons">
@@ -255,7 +255,7 @@ Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertri
 							<div class="profile-name">Andreas Wagner</div>
 							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer &amp; Big Data Scientist</div>
 							<div class="profile-desc">
-								<p>Andreas war zuletzt Leiter Produktmanagement bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partnern im europ&auml;ischen eCommerde Markt. <br>
+								<p>Andreas war zuletzt Leiter Produktmanagement bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partnern im europ&auml;ischen eCommerce. <br>
 Als Big Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut s&auml;mtliche Big Data &amp; Personalisierungs Projekte.</p>
 							</div>
 							<ul class="profile-social-icons">
