last SEO improvements

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="profile" href="http://gmpg.org/xfn/11" />
     
     <!-- Some SEO stuff -->
-	<meta name="description" content="Mit Data-Driven Multichannel Projekten von Commerce-Experts zu mehr Erfolg in Ihrem eBusiness.">
+	<meta name="description" content="Mit Data-Driven Multichannel Projekten von Commerce-Experts zu mehr nachhaltigem Erfolg in Ihrem Multichannel eBusiness.">
     <link rel="canonical" href="http://www.commerce-experts.com/" />
 	<meta property="og:locale" content="de_DE" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Commerce-Experts | Data-Driven Multichannel eBusiness" />
-    <meta property="og:description" content="Mit Data-Driven Multichannel Projekten von Commerce-Experts zu mehr Erfolg in Ihrem eBusiness." />
+    <meta property="og:description" content="Mit Data-Driven Multichannel Projekten von Commerce-Experts zu mehr nachhaltigem Erfolg in Ihrem Multichannel eBusiness." />
     <meta property="og:url" content="http://www.commerce-experts.com/" />
     <meta property="og:site_name" content="Commerce-Experts" />
     <meta property="og:image" content="http://www.commerce-experts.com/img/CXP-Commerce-Experts-Logo.png" />
