improved readability rating

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="span12">
 					<div id="slidecaption">
 						Ihre <span class="color-text">Experten</span> f&uuml;r den<span class="color-text"> digitalen Handel</span>
-						<div class="sub-caption">F&uuml;r unsere Kunden und Partner ebnen wir Wege beim Einstieg, bei der Optimierung sowie w&auml;hrend der Wachstumsphase im digitalen, datengetriebenen Multichannel Handel</div>
+						<div class="sub-caption">F&uuml;r unsere Kunden und Partner ebnen wir Wege beim Einstieg, bei der Optimierung sowie w&auml;hrend der Wachstumsphase im digitalen, datengetriebenen Multichannel Handel.</div>
 						<a href="#about" class="btn white scroll-link">Erfahren Sie mehr</a>
 					</div>
 				</div>
@@ -129,10 +129,10 @@
 				<div class="row">
 					<div class="span12">
 						<div class="title">Was <span class="color-text">wir </span>tun <span class="profile-icons">&#0084;</span></div>
-                        <div class="sub-caption"><h1 style=font-size:1.2em>Data-Driven eBusiness - Qualitativ hochwertige datengetriebene Projekte mit hohem Investitionsschutz f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h1>
-                        <p>Erfolgreiche Projekte im digitalen Handel zeichnen sich immer h&auml;ufiger durch eine kanal&uuml;bergreifende, integrierte Nutzung von Datenstrukturen aus - dem sog. <strong>Data-Driven eBusiness</strong>. Grundlage hierfür bildet eine Vielzahl an Datenpunkten aus unterschiedlichen Quell-Systemen, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen. Diese Daten sind der Erfolgsfaktor für den Einsatz personalisierter Marketingmaßnahmen. Sie erm&ouml;glichen eine stetige Optimierung der Kundenansprache und der Customer Experience.
+                        <div class="sub-caption"><h1 style=font-size:1.2em>Data-Driven eBusiness - Qualitativ hochwertige datengetriebene Projekte f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h1>
+                        <p><strong>Data-Driven eBusiness</strong> wird mit seiner kanal&uuml;bergreifenden, integrierten Nutzung von Datenstrukturen immer entscheidender für den Erfolg im eBusiness.<br>Grundlage bildet eine Vielzahl an Datenpunkten aus unterschiedlichen Quell-Systemen, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen.<br> Diese Daten sind der Erfolgsfaktor für den Einsatz personalisierter Marketingmaßnahmen.<br>Sie erm&ouml;glichen eine nachhaltige Optimierung der Customer Experience.
                         <p></p>    
-                        <p>Wesentliches Merkmal unserer Projekte ist daher eine zentrale &amp; integrierte Erfassung von Datenstr&ouml;men aus allen relevanten Quellen. F&uuml;r den erforderlichen Datenaustausch zwischen den Quell-Systemen entwickelt / supportet Commerce-Experts mit seinem Datahub, Schnittstellen zu f&uuml;hrenden Systemen im Markt und schafft so nachhaltig und unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r seine Kunden &amp; Partner.
+                        <p><strong>Wesentliches Merkmal</strong> unserer Projekte ist die zentrale &amp; integrierte Erfassung von Datenstr&ouml;men aus allen relevanten unternehmensinternen Quellen.<br>Zur B&uuml;ndelung und Aussteuerung entwickelt &amp; supportet Commerce-Experts Schnittstellen zu f&uuml;hrenden Systemen im Markt.<br>Hierdurch schafft Commerce Experts nachhaltig und unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r seine Kunden &amp; Partner.
                             </p>
                         </div><p></p>
 						
