further Keyword improvements

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 					<div class="span12">
 						<div class="title">Was <span class="color-text">wir </span>tun <span class="profile-icons">&#0084;</span></div>
                         <div class="sub-caption"><h1 style=font-size:1.2em>Data-Driven eBusiness - Qualitativ hochwertige datengetriebene Projekte f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h1>
-                        <p><strong>Data-Driven eBusiness</strong> wird mit seiner kanal&uuml;bergreifenden, integrierten Nutzung von Datenstrukturen immer entscheidender für den Erfolg im eBusiness.<br>Grundlage bildet eine Vielzahl an Datenpunkten aus unterschiedlichen Quell-Systemen, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen.<br> Diese Daten sind der Erfolgsfaktor für den Einsatz personalisierter Marketingmaßnahmen.<br>Sie erm&ouml;glichen eine nachhaltige Optimierung der Customer Experience.
+                        <p><strong>Data-Driven eBusiness</strong> wird mit seiner kanal&uuml;bergreifenden, integrierten Nutzung von Datenstrukturen immer entscheidender für den Erfolg im eBusiness.<br>Grundlage bildet eine Vielzahl an Datenpunkten aus unterschiedlichen Quell-Systemen, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen.<br> Diese Daten sind der Erfolgsfaktor beim Einsatz personalisierter Marketingmaßnahmen.<br>Sie erm&ouml;glichen eine nachhaltige Optimierung der Customer Experience.
                         <p></p>    
-                        <p><strong>Wesentliches Merkmal</strong> unserer Projekte ist die zentrale &amp; integrierte Erfassung von Datenstr&ouml;men aus allen relevanten unternehmensinternen Quellen.<br>Zur B&uuml;ndelung und Aussteuerung entwickelt &amp; supportet Commerce-Experts Schnittstellen zu f&uuml;hrenden Systemen im Markt.<br>Hierdurch schafft Commerce Experts nachhaltig und unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r seine Kunden &amp; Partner.
+                        <p><strong>Wesentliches Merkmal</strong> unserer Projekte ist die zentrale &amp; integrierte Erfassung von Datenstr&ouml;men aus den relevanten unternehmensinternen Quellen.<br>Zur B&uuml;ndelung und Aussteuerung entwickelt &amp; supportet Commerce-Experts Data-Driven APIs zu f&uuml;hrenden Systemen im Markt.<br>Hierdurch schafft Commerce Experts nachhaltig und unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r seine Kunden &amp; Partner.
                             </p>
                         </div><p></p>
 						
@@ -174,12 +174,12 @@
 							</div>
 							<div class="span3">
 								<h3 style="font-size:0.95em">Application Management</h3>
-								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens - wir verantworten Ihre Applikationen. <br>Infrastruktur & Hosting sowie deren Risiken sind unsere Kernkompetenzen. <br>Wir minimieren das Risiko durch garantierte Verf&uuml;gbarkeiten, Sie entscheiden die H&ouml;he Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
+								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens - wir verantworten Ihre Applikationen. <br>Infrastruktur & Hosting in Verbindung mit ihren Risiken sind unsere Kernkompetenzen. <br>Wir minimieren das Risiko durch garantierte Verf&uuml;gbarkeiten, Sie entscheiden die H&ouml;he Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
                                 <h3 style="font-size:0.95em">Go-to-Market Strategy</h3>
-								<p>Sie suchen einen kompetenten &amp; verl&auml;sslichen Partner f&uuml;r den Vertrieb Ihrer Software-L&ouml;sungen im Europ&auml;ischen eCommerce Markt? Ein umfangreiches eCommerce Netzwerk sowie langj&auml;hrige Beziehungen zu H&auml;ndlern &amp; Agenturen bildet die Grundlage f&uuml;r einen schnellen Vertriebserfolg w&auml;hrend der Wachstumsphase.</p> 								
+								<p>Sie suchen einen kompetenten &amp; verl&auml;sslichen Partner f&uuml;r den Vertrieb Ihrer Software-L&ouml;sungen im Europ&auml;ischen eCommerce Markt? Ein umfangreiches eCommerce Netzwerk und langj&auml;hrige Beziehungen zu H&auml;ndlern &amp; Agenturen bildet die Grundlage f&uuml;r einen schnellen Vertriebserfolg w&auml;hrend der Wachstumsphase.</p> 								
 							</div>
 						</div>
 					</div>
@@ -255,7 +255,7 @@ Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertri
 							<div class="profile-name">Andreas Wagner</div>
 							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer &amp; Big Data Scientist</div>
 							<div class="profile-desc">
-								<p>Andreas war zuletzt Leiter Produktmanagement bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partnern im europ&auml;ischen eCommerce. <br>
+								<p>Andreas war zuletzt Leiter Produktmanagement bei dem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partnern im europ&auml;ischen eCommerce. <br>
 Als Big Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut s&auml;mtliche Big Data &amp; Personalisierungs Projekte.</p>
 							</div>
 							<ul class="profile-social-icons">
