--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="row">
 				<div class="span12">
 					<div id="slidecaption">
-						Ihre <span class="color-text">Experten</span> f&uuml;r den<span class="color-text"> digitalen Handel</span>
+						Ihre <span class="color-text">Experten</span> f&uuml;r den <span class="color-text"> datengetriebenen</span> digitalen Handel
 						<div class="sub-caption">F&uuml;r unsere Kunden und Partner ebnen wir Wege beim Einstieg, bei der Optimierung sowie w&auml;hrend der Wachstumsphase im digitalen, datengetriebenen Multichannel Handel.</div>
 						<a href="#about" class="btn white scroll-link">Erfahren Sie mehr</a>
 					</div>
@@ -130,7 +130,7 @@
 					<div class="span12">
 						<div class="title">Was <span class="color-text">wir </span>tun <span class="profile-icons">&#0084;</span></div>
                         <div class="sub-caption"><h1 style=font-size:1.2em>Data-Driven eBusiness - Qualitativ hochwertige datengetriebene Projekte f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h1>
-                        <p><strong>Data-Driven eBusiness</strong> wird mit seiner kanal&uuml;bergreifenden, integrierten Nutzung von Datenstrukturen immer entscheidender für den Erfolg im eBusiness.<br>Grundlage bildet eine Vielzahl an Datenpunkten aus unterschiedlichen Quell-Systemen, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen.<br> Diese Daten sind der Erfolgsfaktor beim Einsatz personalisierter Marketingmaßnahmen.<br>Sie erm&ouml;glichen eine nachhaltige Optimierung der Customer Experience.
+                        <p><strong>Data-Driven eBusiness</strong> wird mit seiner kanal&uuml;bergreifenden, integrierten Nutzung von Datenstrukturen immer entscheidender für den Erfolg im eBusiness.<br>Grundlage bilden eine Vielzahl an Datenpunkten aus unterschiedlichen Quell-Systemen, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen.<br> Diese Daten sind der Erfolgsfaktor beim Einsatz personalisierter Marketingmaßnahmen.<br>Sie erm&ouml;glichen eine nachhaltige Optimierung der Customer Experience.
                         <p></p>    
                         <p><strong>Wesentliches Merkmal</strong> unserer Projekte ist die zentrale &amp; integrierte Erfassung von Datenstr&ouml;men aus den relevanten unternehmensinternen Quellen.<br>Zur B&uuml;ndelung und Aussteuerung entwickelt &amp; supportet Commerce-Experts Data-Driven APIs zu f&uuml;hrenden Systemen im Markt.<br>Hierdurch schafft Commerce Experts nachhaltig und unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r seine Kunden &amp; Partner.
                             </p>
