added links and title images

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="row">
 				<div class="span12">
 					<div id="slidecaption">
-						Ihre <span class="color-text">Experten</span> f&uuml;r den digitalen Handel
+                        Ihre <span class="color-text">Experten</span> f&uuml;r den <span class="color-text">digitalen</span> Handel
 						<div class="sub-caption">F&uuml;r unsere Kunden und Partner ebnen wir Wege beim Einstieg, bei der Optimierung sowie w&auml;hrend der Wachstumsphase im digitalen, datengetriebenen Multichannel Handel.</div>
 						<a href="#about" class="btn white scroll-link">Erfahren Sie mehr</a>
 					</div>
@@ -280,10 +280,10 @@ Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertri
 						<div class="vertical-text">
                             <h2 style="font-size:1.65em">Unsere preisgekr&ouml;nten Partner <span class="color-text">für Ihr Data-Driven eBusiness</span></h2>
 								<ul class="clients">
-									<li><a href="http://www.nosto.com/"><img src="img/partners/nosto-logo.png" alt="Nosto - Die Plug-n-Play
+									<li><a href="http://www.nosto.com/"><img src="img/partners/nosto-logo.png" title="Nosto erhöht die Gewinne von Online Shops durch ein personalisiertes Online-Shopping-Erlebnis" alt="Nosto - Die Plug-n-Play
 Recommendation Engine"></a></li>
-                                    <li><a href="http://www.econda.de/"><img src="img/partners/econda-logo.png" alt="Econda - Die Data-Driven eCommerce Suite"></a></li>	
-									<li><a href="http://www.smartassistant.com/"><img src="img/partners/smartassistant-logo.png" alt="Smartassistant - The leading Technology for Interactive Product advice."></a></li>
+                                    <li><a href="http://www.econda.de/"><img src="img/partners/econda-logo.png" title="Komplettlösung für datengetriebenes und kundenzentriertes E-Commerce" alt="Econda - Die Data-Driven eCommerce Suite"></a></li>	
+									<li><a href="http://www.smartassistant.com/"><img src="img/partners/smartassistant-logo.png" title="Smartassistant hilft Ihren Kunden die Produkte zu kaufen, die sie lieben werden" alt="Smartassistant - The leading Technology for Interactive Product advice."></a></li>
 									                                    
 								</ul>
 						</div>
