edited headline and changed css for contact line

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="row">
 				<div class="span12">
 					<div id="slidecaption">
-                        Ihre <span class="color-text">Experten</span> f&uuml;r den <span class="color-text">digitalen</span> Handel
+                        <span class="color-text">Experten</span> f&uuml;r den <span class="color-text">daten-getriebenen</span> digitalen Handel
 						<div class="sub-caption">F&uuml;r unsere Kunden und Partner ebnen wir Wege beim Einstieg, bei der Optimierung sowie w&auml;hrend der Wachstumsphase im digitalen, datengetriebenen Multichannel Handel.</div>
 						<a href="#about" class="btn white scroll-link">Erfahren Sie mehr</a>
 					</div>
@@ -301,7 +301,7 @@ Recommendation Engine"></a></li>
 					<div class="span12">
 						<div class="title center-title">Sprechen <span class="color-text">Sie</span> uns an <span class="profile-icons">&#0081;</span></div>
 						<hr>
-						<div class="lead">Wir freuen uns &uuml;ber Ihren Anruf oder eine Nachricht an uns.</div>
+                        <div class="lead"><h2 style="font-size:0.5em">Wir freuen uns &uuml;ber Ihren Anruf oder eine Nachricht an uns.</h2></div>
 						<div class="row">
 							<div class="span8">
 								<div id="googleMap" style="width:100%;height:380px;"></div>	    
