fixed layout problems for media queries

--- a/impressum.html
+++ b/impressum.html
@@ -38,7 +38,7 @@
 				<div class="row">
 					<div class="span12">
                         
-                        <div class="title"><span class="color-text">Impressum:</span></div>
+                        <div class="title"><h1><span class="color-text">Impressum:</span></h1></div>
                         <div class="sub-caption"><h5>Commerce Experts UG (haftungsbeschr&auml;nkt) i.G.</h5></div>                        
                         <p>Technologieberatungs- &amp; Softwarehaus
                         </br>Schulerstrasse 2
@@ -66,7 +66,7 @@
                 <div class="row">
 					<div class="span12">
                         <p></p>
-                        <div class="title"><span class="color-text">Haftungsausschluss:</span></div>
+                        <div class="title"><h2><span class="color-text">Haftungsausschluss:</span></h2></div>
                         <div class="sub-caption"><h5>Haftungsausschluss</h5></div>                        
                         <p>Die Commerce Experts UG (haftungsbschr&auml;nkt) i.G. &uuml;bernimmt keine Garantie daf&uuml;r, dass die auf dieser Website bereitgestellten Informationen vollst&auml;ndig, richtig und in jedem Falle aktuell sind. Dies gilt auch f&uuml;r alle Verbindungen (“Links”), die von dieser Website direkt oder indirekt verweisen. Die Commerce Experts UG (haftungsbschr&auml;nkt) i.G. ist f&uuml;r den Inhalt einer Seite, die mit einem Link erreicht wird, nicht verantwortlich. Die Commerce Experts UG (haftungsbschr&auml;nkt) i.G. beh&auml;lt sich das Recht vor, ohne vorherige Ank&uuml;ndigung &Auml;nderungen oder Erg&auml;nzungen der bereitgestellten Informationen vorzunehmen.</p>
 
@@ -80,7 +80,7 @@
                 <div class="row">
 					<div class="span12"> 
                         <p></p>
-						<div class="title"><span class="color-text">Datenschutz:</span></div>
+						<div class="title"><h2><span class="color-text">Datenschutz:</span></h2></div>
                         <div class="sub-caption"><h5>Ihre Daten bei uns</h5></div>                        
                         <p>Die Commerce Experts UG (haftungsbeschr&auml;nkt) i.G. verpflichtet sich, Ihre pers&ouml;nlichen Daten zu sch&uuml;tzen. Diese Datenschutzerkl&auml;rung beschreibt ausf&uauml;hrlich, welche Informationen wir &uuml;ber Sie erheben und was mit diesen Daten geschieht.</p>
 
