--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 							<div class="span3">
 								<h3 style="font-size:0.92em">Produktsuche &amp; Navigation</h3>
                                 <p>Wir helfen Ihnen dabei die perfekte L&ouml;sung f&uuml;r Ihre Produktsuche- &amp; Shop-Navigation zu finden. Auch w&auml;hrend der Integration und Feinjustierung von FACT-Finder, Fredhopper, Apache Solr oder Elasticsearch beraten und unterst&uuml;tzen wir Sie auf h&ouml;chstem Niveau bei allen Fragen in Bezug auf Produktsuche &amp; Navigation im Online Shop. Einzigartiges Expertenwissen rund um Europas f&uuml;hrende Ecommerce Suchl&ouml;sungen garantiert.</p>
-								<a href="http://www.commerce-experts.com/optimierung-der-produktsuche-und-navigation.html" class="btn small">Erfahren Sie mehr</a>
-                                <hr class="gray margin20 visible-phone">
+								<!-- <a href="http://www.commerce-experts.com/optimierung-der-produktsuche-und-navigation.html" class="btn small">Erfahren Sie mehr</a> -->
+                                <hr class="gray margin20 visible-phone"> 
 							</div>
 							<div class="span3">
 								<h3 style="font-size:0.92em">Data-Driven Commerce</h3>
